add  eye-toggle, menu-bar working

--- a/blog.html
+++ b/blog.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog - Turnaj</title>
-    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/responsive.css" />
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -29,22 +29,11 @@
         <a href="login.html">Login</a>
         <a href="register.html">Sign Up</a>
       </div>
-      <div class="social-icons">
-        <a href="#" aria-label="Facebook">
-          <i class="fa-brands fa-facebook-f"></i>
-        </a>
-        <a href="#" aria-label="Twitter">
-          <i class="fa-brands fa-twitter"></i>
-        </a>
-        <a href="#" aria-label="Instagram">
-          <i class="fa-brands fa-instagram"></i>
-        </a>
-      </div>
     </nav>
 
     <header>
       <a href="index.html" class="logo">
-        <img src="/images/logo.png" alt="Turnaj Logo" />
+        <img src="images/logo.png" alt="Turnaj Logo" />
       </a>
       <div class="hamburger-menu">
         <span></span>
@@ -82,7 +71,7 @@
       <h1>Featured Articles</h1>
       <div class="blog-grid">
         <div class="blog-card">
-          <img src="/images/messi.avif" alt="Player News" />
+          <img src="images/messi.avif" alt="Player News" />
           <div class="blog-content">
             <h3>FPL Player Price Changes - Rises, Falls and Top Transfers</h3>
             <p>Get the latest on player price movements and transfer recommendations for the upcoming gameweek.</p>
@@ -90,7 +79,7 @@
           </div>
         </div>
         <div class="blog-card">
-          <img src="/images/arsenal.jpg" alt="Injuries" />
+          <img src="images/arsenal.jpg" alt="Injuries" />
           <div class="blog-content">
             <h3>Latest Premier League Player Injuries - Club by Club News</h3>
             <p>Stay updated on injury reports and their impact on your fantasy team selections.</p>
@@ -98,7 +87,7 @@
           </div>
         </div>
         <div class="blog-card">
-          <img src="/images/man-u.jpg" alt="Tips" />
+          <img src="images/man-u.jpg" alt="Tips" />
           <div class="blog-content">
             <h3>How to Win Your FPL League: Expert Strategies</h3>
             <p>Pro tips on team building, chip usage, and maximizing your points.</p>
@@ -106,7 +95,7 @@
           </div>
         </div>
         <div class="blog-card">
-          <img src="/images/chealsea.jpg" alt="Guide" />
+          <img src="images/chealsea.jpg" alt="Guide" />
           <div class="blog-content">
             <h3>Basics Explained: How to Play Fantasy Football</h3>
             <p>A beginner's guide to getting started with Turnaj and fantasy football.</p>
@@ -138,7 +127,7 @@
     <footer>
       <div class="footer-content">
         <div class="footer-logo">
-          <img src="/images/logo.png" alt="Turnaj Logo" />
+          <img src="images/logo.png" alt="Turnaj Logo" />
         </div>
 
         <div class="footer-links">
@@ -179,7 +168,7 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html></content>
 <filePath">c:\Users\USER\Desktop\VS Code\venix\venix\blog.html
