--- a/dashboard.html
+++ b/dashboard.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard - Turnaj</title>
-    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/responsive.css" />
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -28,7 +28,7 @@
       </ul>
       <div class="user-section">
         <div class="user-profile">
-          <img src="/images/messi.avif" alt="Avatar" class="avatar" />
+          <img src="images/messi.avif" alt="Avatar" class="avatar" />
           <span id="mobileUserName">User</span>
         </div>
         <a href="#"><i class="fa-solid fa-gear"></i> Settings</a>
@@ -40,7 +40,7 @@
 
     <header class="dashboard-header">
       <a href="dashboard.html" class="logo">
-        <img src="/images/logo.png" alt="Turnaj Logo" />
+        <img src="images/logo.png" alt="Turnaj Logo" />
       </a>
       <div class="hamburger-menu">
         <span></span>
@@ -74,7 +74,7 @@
           </div>
         </div>
         <div class="profile">
-          <img src="/images/messi.avif" alt="Avatar" class="avatar" />
+          <img src="images/messi.avif" alt="Avatar" class="avatar" />
           <span id="userName">User</span>
           <div class="dropdown">
             <a href="#"><i class="fa-solid fa-gear"></i> Settings</a>
@@ -118,12 +118,12 @@
             </div>
             <div class="teams">
               <div class="team">
-                <img src="/images/arsenal.jpg" alt="Arsenal" />
+                <img src="images/arsenal.jpg" alt="Arsenal" />
                 <span class="team-name">Arsenal</span>
               </div>
               <div class="vs-badge">VS</div>
               <div class="team">
-                <img src="/images/chealsea.jpg" alt="Chelsea" />
+                <img src="images/chealsea.jpg" alt="Chelsea" />
                 <span class="team-name">Chelsea</span>
               </div>
             </div>
@@ -146,12 +146,12 @@
             </div>
             <div class="teams">
               <div class="team">
-                <img src="/images/man-u.jpg" alt="Man U" />
+                <img src="images/man-u.jpg" alt="Man U" />
                 <span class="team-name">Man U</span>
               </div>
               <div class="vs-badge">VS</div>
               <div class="team">
-                <img src="/images/arsenal.jpg" alt="Arsenal" />
+                <img src="images/arsenal.jpg" alt="Arsenal" />
                 <span class="team-name">Arsenal</span>
               </div>
             </div>
@@ -179,14 +179,10 @@
           <div class="prediction-item">
             <div class="prediction-match">
               <div class="teams-mini">
-                <img
-                  src="/images/arsenal.jpg"
-                  alt="Arsenal"
-                  class="team-icon"
-                />
+                <img src="images/arsenal.jpg" alt="Arsenal" class="team-icon" />
                 <span>vs</span>
                 <img
-                  src="/images/chealsea.jpg"
+                  src="images/chealsea.jpg"
                   alt="Chelsea"
                   class="team-icon"
                 />
@@ -208,16 +204,12 @@
             <div class="prediction-match">
               <div class="teams-mini">
                 <img
-                  src="/images/man-u.jpg"
+                  src="images/man-u.jpg"
                   alt="Man United"
                   class="team-icon"
                 />
                 <span>vs</span>
-                <img
-                  src="/images/arsenal.jpg"
-                  alt="Arsenal"
-                  class="team-icon"
-                />
+                <img src="images/arsenal.jpg" alt="Arsenal" class="team-icon" />
               </div>
               <div class="prediction-details">
                 <p class="match-teams">Man United vs Arsenal</p>
@@ -344,6 +336,6 @@
     </div>
 
     <script src="/auth/auth.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
