--- a/forgot.html
+++ b/forgot.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forgot Password - Turnaj</title>
-    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/responsive.css" />
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
   </head>
   <body>
     <!-- Mobile Navigation -->
@@ -26,7 +26,7 @@
 
     <header>
       <a href="index.html" class="logo">
-        <img src="/images/logo.png" alt="Turnaj Logo" />
+        <img src="images/logo.png" alt="Turnaj Logo" />
       </a>
       <div class="hamburger-menu">
         <span></span>
@@ -69,7 +69,7 @@
       </div>
     </div>
 
-    <script src="/auth/auth.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="auth/auth.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
