--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Turnaj</title>
-    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/responsive.css" />
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -29,22 +29,11 @@
         <a href="login.html">Login</a>
         <a href="register.html">Sign Up</a>
       </div>
-      <div class="social-icons">
-        <a href="#" aria-label="Facebook">
-          <i class="fa-brands fa-facebook-f"></i>
-        </a>
-        <a href="#" aria-label="Twitter">
-          <i class="fa-brands fa-twitter"></i>
-        </a>
-        <a href="#" aria-label="Instagram">
-          <i class="fa-brands fa-instagram"></i>
-        </a>
-      </div>
     </nav>
 
     <header>
       <a href="index.html" class="logo">
-        <img src="/images/logo.png" alt="logo" />
+        <img src="images/logo.png" alt="logo" />
       </a>
       <div class="hamburger-menu">
         <span></span>
@@ -85,19 +74,19 @@
       <h1>Top Features</h1>
       <div class="feat-prod">
         <div class="feat-box">
-          <img src="/images/feat1.png" alt="" />
+          <img src="images/feat1.png" alt="" />
           <h3>Escrow</h3>
         </div>
         <div class="feat-box">
-          <img src="/images/feat2.png" alt="" />
+          <img src="images/feat2.png" alt="" />
           <h3>No limits</h3>
         </div>
         <div class="feat-box">
-          <img src="/images/feat3.png" alt="" />
+          <img src="images/feat3.png" alt="" />
           <h3>Decentralized</h3>
         </div>
         <div class="feat-box">
-          <img src="/images/feat4.png" alt="" />
+          <img src="images/feat4.png" alt="" />
           <h3>Community-Powered</h3>
         </div>
       </div>
@@ -116,25 +105,25 @@
         <div class="steps-container">
           <div class="step">
             <div class="step-icon">
-              <img src="/images/feat1.png" alt="Team selection icon" />
+              <img src="images/feat1.png" alt="Team selection icon" />
             </div>
             <h4>Team Selection</h4>
           </div>
           <div class="step">
             <div class="step-icon">
-              <img src="/images/feat2.png" alt="Create a team icon" />
+              <img src="images/feat2.png" alt="Create a team icon" />
             </div>
             <h4>Create a Team</h4>
           </div>
           <div class="step">
             <div class="step-icon">
-              <img src="/images/feat3.png" alt="Join a league icon" />
+              <img src="images/feat3.png" alt="Join a league icon" />
             </div>
             <h4>Join a League</h4>
           </div>
           <div class="step">
             <div class="step-icon">
-              <img src="/images/feat4.png" alt="Check team points icon" />
+              <img src="images/feat4.png" alt="Check team points icon" />
             </div>
             <h4>Check Team Points</h4>
           </div>
@@ -163,7 +152,7 @@
     <footer>
       <div class="footer-content">
         <div class="footer-logo">
-          <img src="/images/logo.png" alt="Turnaj Logo" />
+          <img src="images/logo.png" alt="Turnaj Logo" />
         </div>
 
         <div class="footer-links">
@@ -204,6 +193,6 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
