--- a/leaderboard.html
+++ b/leaderboard.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leaderboard - Turnaj</title>
-    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/responsive.css" />
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -28,7 +28,7 @@
       </ul>
       <div class="user-section">
         <div class="user-profile">
-          <img src="/images/messi.avif" alt="Avatar" class="avatar" />
+          <img src="images/messi.avif" alt="Avatar" class="avatar" />
           <span id="mobileUserName">User</span>
         </div>
         <a href="#" id="mobileSettings"><i class="fa-solid fa-gear"></i> Settings</a>
@@ -40,7 +40,7 @@
 
     <header class="dashboard-header">
       <a href="dashboard.html" class="logo">
-        <img src="/images/logo.png" alt="Turnaj Logo" />
+        <img src="images/logo.png" alt="Turnaj Logo" />
       </a>
       <div class="hamburger-menu">
         <span></span>
@@ -60,7 +60,7 @@
           <span class="badge">3</span>
         </div>
         <div class="profile">
-          <img src="/images/messi.avif" alt="Avatar" class="avatar" />
+          <img src="images/messi.avif" alt="Avatar" class="avatar" />
           <span id="userName">User</span>
           <div class="dropdown">
             <a href="#" id="settings"><i class="fa-solid fa-gear"></i> Settings</a>
@@ -79,7 +79,7 @@
           <div class="leader-item top-leader">
             <div class="rank-badge gold">1</div>
             <div class="leader-info">
-              <img src="/images/messi.avif" alt="Player" class="avatar" />
+              <img src="images/messi.avif" alt="Player" class="avatar" />
               <div class="leader-name">Lionel Messi</div>
             </div>
             <div class="leader-stats">
@@ -91,7 +91,7 @@
           <div class="leader-item">
             <div class="rank-badge silver">2</div>
             <div class="leader-info">
-              <img src="/images/arsenal.jpg" alt="Player" class="avatar" />
+              <img src="images/arsenal.jpg" alt="Player" class="avatar" />
               <div class="leader-name">Arsenal FC</div>
             </div>
             <div class="leader-stats">
@@ -103,7 +103,7 @@
           <div class="leader-item">
             <div class="rank-badge bronze">3</div>
             <div class="leader-info">
-              <img src="/images/man-u.jpg" alt="Player" class="avatar" />
+              <img src="images/man-u.jpg" alt="Player" class="avatar" />
               <div class="leader-name">Manchester United</div>
             </div>
             <div class="leader-stats">
@@ -115,7 +115,7 @@
           <div class="leader-item">
             <div class="rank-badge">4</div>
             <div class="leader-info">
-              <img src="/images/chealsea.jpg" alt="Player" class="avatar" />
+              <img src="images/chealsea.jpg" alt="Player" class="avatar" />
               <div class="leader-name">Chelsea FC</div>
             </div>
             <div class="leader-stats">
@@ -127,7 +127,7 @@
           <div class="leader-item user-rank">
             <div class="rank-badge you">15</div>
             <div class="leader-info">
-              <img src="/images/messi.avif" alt="Your Avatar" class="avatar" />
+              <img src="images/messi.avif" alt="Your Avatar" class="avatar" />
               <div class="leader-name" id="currentUserName">You</div>
             </div>
             <div class="leader-stats">
@@ -140,7 +140,7 @@
           <div class="leader-item">
             <div class="rank-badge">5</div>
             <div class="leader-info">
-              <img src="/images/messi.avif" alt="Player" class="avatar" />
+              <img src="images/messi.avif" alt="Player" class="avatar" />
               <div class="leader-name">Player 5</div>
             </div>
             <div class="leader-stats">
@@ -152,7 +152,7 @@
           <div class="leader-item">
             <div class="rank-badge">6</div>
             <div class="leader-info">
-              <img src="/images/arsenal.jpg" alt="Player" class="avatar" />
+              <img src="images/arsenal.jpg" alt="Player" class="avatar" />
               <div class="leader-name">Player 6</div>
             </div>
             <div class="leader-stats">
@@ -164,7 +164,7 @@
           <div class="leader-item">
             <div class="rank-badge">7</div>
             <div class="leader-info">
-              <img src="/images/man-u.jpg" alt="Player" class="avatar" />
+              <img src="images/man-u.jpg" alt="Player" class="avatar" />
               <div class="leader-name">Player 7</div>
             </div>
             <div class="leader-stats">
@@ -176,7 +176,7 @@
           <div class="leader-item">
             <div class="rank-badge">8</div>
             <div class="leader-info">
-              <img src="/images/chealsea.jpg" alt="Player" class="avatar" />
+              <img src="images/chealsea.jpg" alt="Player" class="avatar" />
               <div class="leader-name">Player 8</div>
             </div>
             <div class="leader-stats">
@@ -188,7 +188,7 @@
           <div class="leader-item">
             <div class="rank-badge">9</div>
             <div class="leader-info">
-              <img src="/images/messi.avif" alt="Player" class="avatar" />
+              <img src="images/messi.avif" alt="Player" class="avatar" />
               <div class="leader-name">Player 9</div>
             </div>
             <div class="leader-stats">
@@ -200,7 +200,7 @@
           <div class="leader-item">
             <div class="rank-badge">10</div>
             <div class="leader-info">
-              <img src="/images/arsenal.jpg" alt="Player" class="avatar" />
+              <img src="images/arsenal.jpg" alt="Player" class="avatar" />
               <div class="leader-name">Player 10</div>
             </div>
             <div class="leader-stats">
@@ -213,7 +213,7 @@
     </div>
 
     <script src="/auth/auth.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html></content>
 <filePath">c:\Users\USER\Desktop\VS Code\venix\venix\leaderboard.html
