--- a/matches.html
+++ b/matches.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Matches - Turnaj</title>
-    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/responsive.css" />
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -28,7 +28,7 @@
       </ul>
       <div class="user-section">
         <div class="user-profile">
-          <img src="/images/messi.avif" alt="Avatar" class="avatar" />
+          <img src="images/messi.avif" alt="Avatar" class="avatar" />
           <span id="mobileUserName">User</span>
         </div>
         <a href="#" id="mobileSettings"><i class="fa-solid fa-gear"></i> Settings</a>
@@ -40,7 +40,7 @@
 
     <header class="dashboard-header">
       <a href="dashboard.html" class="logo">
-        <img src="/images/logo.png" alt="Turnaj Logo" />
+        <img src="images/logo.png" alt="Turnaj Logo" />
       </a>
       <div class="hamburger-menu">
         <span></span>
@@ -60,7 +60,7 @@
           <span class="badge">3</span>
         </div>
         <div class="profile">
-          <img src="/images/messi.avif" alt="Avatar" class="avatar" />
+          <img src="images/messi.avif" alt="Avatar" class="avatar" />
           <span id="userName">User</span>
           <div class="dropdown">
             <a href="#" id="settings"><i class="fa-solid fa-gear"></i> Settings</a>
@@ -92,12 +92,12 @@
             </div>
             <div class="teams">
               <div class="team">
-                <img src="/images/arsenal.jpg" alt="Arsenal" />
+                <img src="images/arsenal.jpg" alt="Arsenal" />
                 <div class="team-name">Arsenal</div>
               </div>
               <div class="vs-badge">VS</div>
               <div class="team">
-                <img src="/images/chealsea.jpg" alt="Chelsea" />
+                <img src="images/chealsea.jpg" alt="Chelsea" />
                 <div class="team-name">Chelsea</div>
               </div>
             </div>
@@ -116,12 +116,12 @@
             </div>
             <div class="teams">
               <div class="team">
-                <img src="/images/man-u.jpg" alt="Man Utd" />
+                <img src="images/man-u.jpg" alt="Man Utd" />
                 <div class="team-name">Man Utd</div>
               </div>
               <div class="vs-badge">VS</div>
               <div class="team">
-                <img src="/images/messi.avif" alt="Barcelona" />
+                <img src="images/messi.avif" alt="Barcelona" />
                 <div class="team-name">Barcelona</div>
               </div>
             </div>
@@ -141,12 +141,12 @@
             </div>
             <div class="teams">
               <div class="team">
-                <img src="/images/arsenal.jpg" alt="Arsenal" />
+                <img src="images/arsenal.jpg" alt="Arsenal" />
                 <div class="team-name">Arsenal</div>
               </div>
               <div class="vs-badge">VS</div>
               <div class="team">
-                <img src="/images/man-u.jpg" alt="Man Utd" />
+                <img src="images/man-u.jpg" alt="Man Utd" />
                 <div class="team-name">Man Utd</div>
               </div>
             </div>
@@ -163,12 +163,12 @@
             </div>
             <div class="teams">
               <div class="team">
-                <img src="/images/chealsea.jpg" alt="Chelsea" />
+                <img src="images/chealsea.jpg" alt="Chelsea" />
                 <div class="team-name">Chelsea</div>
               </div>
               <div class="vs-badge">VS</div>
               <div class="team">
-                <img src="/images/messi.avif" alt="Barcelona" />
+                <img src="images/messi.avif" alt="Barcelona" />
                 <div class="team-name">Barcelona</div>
               </div>
             </div>
@@ -179,7 +179,7 @@
     </div>
 
     <script src="/auth/auth.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html></content>
 <filePath">c:\Users\USER\Desktop\VS Code\venix\venix\matches.html
