--- a/about-us.html
+++ b/about-us.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us - Turnaj</title>
-    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/responsive.css" />
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -29,22 +29,11 @@
         <a href="login.html">Login</a>
         <a href="register.html">Sign Up</a>
       </div>
-      <div class="social-icons">
-        <a href="#" aria-label="Facebook">
-          <i class="fa-brands fa-facebook-f"></i>
-        </a>
-        <a href="#" aria-label="Twitter">
-          <i class="fa-brands fa-twitter"></i>
-        </a>
-        <a href="#" aria-label="Instagram">
-          <i class="fa-brands fa-instagram"></i>
-        </a>
-      </div>
     </nav>
 
     <header>
       <a href="index.html" class="logo">
-        <img src="/images/logo.png" alt="Turnaj Logo" />
+        <img src="images/logo.png" alt="Turnaj Logo" />
       </a>
       <div class="hamburger-menu">
         <span></span>
@@ -82,22 +71,22 @@
       <h1>Why Choose Turnaj?</h1>
       <div class="feat-prod">
         <div class="feat-box">
-          <img src="/images/feat1.png" alt="Squad Selection" />
+          <img src="images/feat1.png" alt="Squad Selection" />
           <h3>Pick Your Squad</h3>
           <p>Use your budget to select 15 players from the Premier League.</p>
         </div>
         <div class="feat-box">
-          <img src="/images/feat2.png" alt="Create Leagues" />
+          <img src="images/feat2.png" alt="Create Leagues" />
           <h3>Create & Join Leagues</h3>
           <p>Play against friends, family, or join public leagues and cups.</p>
         </div>
         <div class="feat-box">
-          <img src="/images/feat3.png" alt="Compete" />
+          <img src="images/feat3.png" alt="Compete" />
           <h3>Compete & Win</h3>
           <p>Real-time scoring, fair settlements, and exciting prizes.</p>
         </div>
         <div class="feat-box">
-          <img src="/images/feat4.png" alt="Community" />
+          <img src="images/feat4.png" alt="Community" />
           <h3>Community-Powered</h3>
           <p>Join millions of players in the biggest fantasy football game.</p>
         </div>
@@ -117,28 +106,28 @@
         <div class="steps-container">
           <div class="step">
             <div class="step-icon">
-              <img src="/images/feat1.png" alt="Register icon" />
+              <img src="images/feat1.png" alt="Register icon" />
             </div>
             <h4>Register & Login</h4>
             <p>Create your account and join the community.</p>
           </div>
           <div class="step">
             <div class="step-icon">
-              <img src="/images/feat2.png" alt="Build team icon" />
+              <img src="images/feat2.png" alt="Build team icon" />
             </div>
             <h4>Build Your Team</h4>
             <p>Select players within your budget and formation.</p>
           </div>
           <div class="step">
             <div class="step-icon">
-              <img src="/images/feat3.png" alt="Join leagues icon" />
+              <img src="images/feat3.png" alt="Join leagues icon" />
             </div>
             <h4>Join Leagues</h4>
             <p>Compete in private or public leagues.</p>
           </div>
           <div class="step">
             <div class="step-icon">
-              <img src="/images/feat4.png" alt="Track progress icon" />
+              <img src="images/feat4.png" alt="Track progress icon" />
             </div>
             <h4>Track & Win</h4>
             <p>Monitor scores and climb the leaderboards.</p>
@@ -169,7 +158,7 @@
     <footer>
       <div class="footer-content">
         <div class="footer-logo">
-          <img src="/images/logo.png" alt="Turnaj Logo" />
+          <img src="images/logo.png" alt="Turnaj Logo" />
         </div>
 
         <div class="footer-links">
@@ -210,7 +199,7 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html></content>
 <filePath">c:\Users\USER\Desktop\VS Code\venix\venix\about-us.html
