--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact - Turnaj</title>
-    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/responsive.css" />
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -29,22 +29,11 @@
         <a href="login.html">Login</a>
         <a href="register.html">Sign Up</a>
       </div>
-      <div class="social-icons">
-        <a href="#" aria-label="Facebook">
-          <i class="fa-brands fa-facebook-f"></i>
-        </a>
-        <a href="#" aria-label="Twitter">
-          <i class="fa-brands fa-twitter"></i>
-        </a>
-        <a href="#" aria-label="Instagram">
-          <i class="fa-brands fa-instagram"></i>
-        </a>
-      </div>
     </nav>
 
     <header>
       <a href="index.html" class="logo">
-        <img src="/images/logo.png" alt="Turnaj Logo" />
+        <img src="images/logo.png" alt="Turnaj Logo" />
       </a>
       <div class="hamburger-menu">
         <span></span>
@@ -135,7 +124,7 @@
     <footer>
       <div class="footer-content">
         <div class="footer-logo">
-          <img src="/images/logo.png" alt="Turnaj Logo" />
+          <img src="images/logo.png" alt="Turnaj Logo" />
         </div>
 
         <div class="footer-links">
@@ -176,7 +165,7 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html></content>
 <filePath">c:\Users\USER\Desktop\VS Code\venix\venix\contact.html
