--- a/settings.html
+++ b/settings.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Settings - Turnaj</title>
-    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/responsive.css" />
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href=".css/style.css" />
+    <link rel="stylesheet" href=".css/responsive.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -28,7 +28,7 @@
       </ul>
       <div class="user-section">
         <div class="user-profile">
-          <img src="/images/messi.avif" alt="Avatar" class="avatar" />
+          <img src="images/messi.avif" alt="Avatar" class="avatar" />
           <span id="mobileUserName">User</span>
         </div>
         <a href="settings.html"><i class="fa-solid fa-gear"></i> Settings</a>
@@ -40,7 +40,7 @@
 
     <header class="dashboard-header">
       <a href="dashboard.html" class="logo">
-        <img src="/images/logo.png" alt="Turnaj Logo" />
+        <img src="images/logo.png" alt="Turnaj Logo" />
       </a>
       <div class="hamburger-menu">
         <span></span>
@@ -60,7 +60,7 @@
           <span class="badge">3</span>
         </div>
         <div class="profile">
-          <img src="/images/messi.avif" alt="Avatar" class="avatar" />
+          <img src="images/messi.avif" alt="Avatar" class="avatar" />
           <span id="userName">User</span>
           <div class="dropdown">
             <a href="settings.html"><i class="fa-solid fa-gear"></i> Settings</a>
@@ -110,7 +110,7 @@
     </div>
 
     <script src="/auth/auth.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html></content>
 <filePath">c:\Users\USER\Desktop\VS Code\venix\venix\settings.html
