work on profile pic

--- a/dashboard.html
+++ b/dashboard.html
@@ -23,8 +23,8 @@
         <li><a href="dashboard.html">Dashboard</a></li>
         <li><a href="matches.html">Matches</a></li>
         <li><a href="leaderboard.html">Leaderboard</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="blogboard.html">Blog</a></li>
+        <li><a href="contactboard.html">Contact</a></li>
       </ul>
       <div class="user-section">
         <div class="user-profile">
@@ -51,8 +51,8 @@
         <a href="dashboard.html">Dashboard</a>
         <a href="matches.html">Matches</a>
         <a href="leaderboard.html">Leaderboard</a>
-        <a href="blog.html">Blog</a>
-        <a href="contact.html">Contact</a>
+        <a href="blogboard.html">Blog</a>
+        <a href="contactboard.html">Contact</a>
       </nav>
       <div class="user-menu">
         <div class="notifications">
@@ -77,8 +77,10 @@
           <img src="images/messi.avif" alt="Avatar" class="avatar" />
           <span id="userName">User</span>
           <div class="dropdown">
-            <a href="#"><i class="fa-solid fa-gear"></i> Settings</a>
-            <a href="#" id="logout"
+            <a href="settings.html"
+              ><i class="fa-solid fa-gear"></i> Settings</a
+            >
+            <a href="login.html" id="logout"
               ><i class="fa-solid fa-right-from-bracket"></i> Logout</a
             >
           </div>
