--- a/leaderboard.html
+++ b/leaderboard.html
@@ -6,7 +6,7 @@
     <title>Leaderboard - Turnaj</title>
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/responsive.css" />
+    <link rel="stylesheet" href="/css/responsive.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -213,7 +213,7 @@
     </div>
 
     <script src="/auth/auth.js"></script>
-    <script src="js/script.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html></content>
 <filePath">c:\Users\USER\Desktop\VS Code\venix\venix\leaderboard.html
