fix dashboard header

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -23,8 +23,8 @@
         <li><a href="dashboard.html">Dashboard</a></li>
         <li><a href="matches.html">Matches</a></li>
         <li><a href="leaderboard.html">Leaderboard</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="blogboard.html">Blog</a></li>
+        <li><a href="contactboard.html">Contact</a></li>
       </ul>
       <div class="user-section">
         <div class="user-profile">
