--- a/blogboard.html
+++ b/blogboard.html
@@ -31,8 +31,8 @@
           <img src="images/messi.avif" alt="Avatar" class="avatar" />
           <span id="mobileUserName">User</span>
         </div>
-        <a href="#"><i class="fa-solid fa-gear"></i> Settings</a>
-        <a href="#" id="mobileLogout"
+        <a href="settings.html"><i class="fa-solid fa-gear"></i> Settings</a>
+        <a href="login.html" id="mobileLogout"
           ><i class="fa-solid fa-right-from-bracket"></i> Logout</a
         >
       </div>
