--- a/leaderboard.html
+++ b/leaderboard.html
@@ -51,8 +51,8 @@
         <a href="dashboard.html">Dashboard</a>
         <a href="matches.html">Matches</a>
         <a href="leaderboard.html">Leaderboard</a>
-        <a href="blog.html">Blog</a>
-        <a href="contact.html">Contact</a>
+        <a href="blogboard.html">Blog</a>
+        <a href="contactboard.html">Contact</a>
       </nav>
       <div class="user-menu">
         <div class="notifications">
