--- a/leaderboard.html
+++ b/leaderboard.html
@@ -31,8 +31,8 @@
           <img src="images/messi.avif" alt="Avatar" class="avatar" />
           <span id="mobileUserName">User</span>
         </div>
-        <a href="#" id="mobileSettings"><i class="fa-solid fa-gear"></i> Settings</a>
-        <a href="#" id="mobileLogout"
+        <a href="settings.html" id="mobileSettings"><i class="fa-solid fa-gear"></i> Settings</a>
+        <a href="login.html" id="mobileLogout"
           ><i class="fa-solid fa-right-from-bracket"></i> Logout</a
         >
       </div>
@@ -63,8 +63,8 @@
           <img src="images/messi.avif" alt="Avatar" class="avatar" />
           <span id="userName">User</span>
           <div class="dropdown">
-            <a href="#" id="settings"><i class="fa-solid fa-gear"></i> Settings</a>
-            <a href="#" id="logout"
+            <a href="settings.html" id="settings"><i class="fa-solid fa-gear"></i> Settings</a>
+            <a href="login.html" id="logout"
               ><i class="fa-solid fa-right-from-bracket"></i> Logout</a
             >
           </div>
