--- a/contactboard.html
+++ b/contactboard.html
@@ -77,8 +77,8 @@
           <img src="images/messi.avif" alt="Avatar" class="avatar" />
           <span id="userName">User</span>
           <div class="dropdown">
-            <a href="#"><i class="fa-solid fa-gear"></i> Settings</a>
-            <a href="#" id="logout"
+            <a href="settings.html"><i class="fa-solid fa-gear"></i> Settings</a>
+            <a href="login.html" id="logout"
               ><i class="fa-solid fa-right-from-bracket"></i> Logout</a
             >
           </div>
